// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integrations selectors should get channel by type and address 1`] = `
Immutable.Map {
  "preferred": true,
  "isDeactivated": false,
  "verified": true,
  "name": "Acme Support",
  "address": "support@acme.gorgias.io",
  "isDefault": false,
  "signature": Immutable.Map {
    "text": "cheers, Steve",
    "html": "cheers, <strong>Steve</strong>",
  },
  "reconnectUrl": undefined,
  "type": "email",
  "id": 1,
}
`;

exports[`integrations selectors should get channels 1`] = `
Immutable.List [
  Immutable.Map {
    "preferred": false,
    "isDeactivated": false,
    "verified": true,
    "name": "Acme Billing",
    "address": "billing@acme.gorgias.io",
    "isDefault": false,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "reconnectUrl": "/integrations/gmail/auth/pre-callback?integration_id=5",
    "type": "email",
    "id": 5,
  },
  Immutable.Map {
    "preferred": false,
    "isDeactivated": true,
    "verified": true,
    "name": "Deactivated gmail",
    "address": "billing+1@acme.gorgias.io",
    "isDefault": false,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "reconnectUrl": "/integrations/gmail/auth/pre-callback?integration_id=7",
    "type": "email",
    "id": 7,
  },
  Immutable.Map {
    "preferred": true,
    "isDeactivated": false,
    "verified": true,
    "name": "Acme Support",
    "address": "support@acme.gorgias.io",
    "isDefault": false,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "reconnectUrl": undefined,
    "type": "email",
    "id": 1,
  },
  Immutable.Map {
    "preferred": true,
    "isDeactivated": false,
    "verified": true,
    "name": "Acme Contact",
    "address": "contact@acme.com",
    "isDefault": false,
    "signature": undefined,
    "reconnectUrl": undefined,
    "type": "email",
    "id": 15,
  },
  Immutable.Map {
    "preferred": true,
    "isDeactivated": false,
    "verified": false,
    "name": "Acme Unverified",
    "address": "unverified@gorgias.io",
    "isDefault": false,
    "signature": undefined,
    "reconnectUrl": undefined,
    "type": "email",
    "id": 13,
  },
  Immutable.Map {
    "preferred": true,
    "isDeactivated": false,
    "verified": false,
    "name": "Sendgrid Integration",
    "address": "sendgrid@gorgias.io",
    "isDefault": false,
    "signature": undefined,
    "reconnectUrl": undefined,
    "type": "email",
    "id": 12,
  },
]
`;

exports[`integrations selectors should get channels signature 1`] = `
Immutable.Map {
  "text": "cheers, Steve",
  "html": "cheers, <strong>Steve</strong>",
}
`;
